<resources>
    <string name="app_name">BTGCurrencyConverter</string>
    <string name="idTV">USD</string>
    <string name="nameTV">US Dollar</string>
    <string name="fromTV">from:</string>
    <string name="toTV">to:</string>
    <string name="toBt">BRL</string>
    <string name="labelTV">value to convert</string>
    <string name="resultTV">0.00</string>
    <string name="resultLTV">"result: "</string>
    <string name="errorTV">Error message</string>
    <string name="errorBt">try again</string>
</resources>